# friday-project

./: .env.example  .gitignore  Makefile  README.md  dev.ps1  pyproject.toml
.github/workflows/: ci.yml
docs/: iphone-shortcuts.md  wake-word-training.md
docs/adr/: 0001-message-bus.md  0002-language-python.md  0003-smart-home-home-assistant.md
infra/: docker-compose.yml
infra/mosquitto/: mosquitto.conf
infra/scripts/: gen-certs.sh
scripts/: gen-wakeword-samples.py  install-piper.sh  record-wakeword.py  train-wakeword.sh
src/christopher/: __init__.py
src/christopher/agents/: __init__.py
src/christopher/agents/desktop/: __init__.py  app.py  capabilities.py  skills.py
src/christopher/agents/voice/: __init__.py  app.py  config.py  factory.py  interfaces.py  pipeline.py  vad.py
src/christopher/agents/voice/providers/: __init__.py  fake.py  openwakeword_ww.py  piper_tts.py  pushtotalk.py  sounddevice_io.py  yandex_stt.py  yandex_tts.py
src/christopher/cli/: __init__.py  app.py
src/christopher/core/: app.py  audit.py  brain.py  registry.py  router.py  scheduler.py
src/christopher/shared/: bus.py  config.py  env.py  protocol.py  topics.py
src/friday/: __init__.py
src/friday/agents/desktop/: app.py  capabilities.py  claude_code.py  skills.py  winctl.py
src/friday/agents/home/: __init__.py  app.py  config.py  factory.py  ha.py  interfaces.py  mock.py
src/friday/agents/voice/: app.py  config.py  factory.py  pipeline.py
src/friday/agents/voice/providers/: fake.py  openwakeword_ww.py  piper_tts.py  pushtotalk.py  sounddevice_io.py  yandex_stt.py  yandex_tts.py  yandex_v3_tts.py
src/friday/cli/: __init__.py  app.py
src/friday/core/: __init__.py  app.py  audit.py  brain.py  memory.py  push.py  registry.py  router.py  scheduler.py
src/friday/hud/: __init__.py  app.py
src/friday/hud/static/: index.html
src/friday/shared/: __init__.py  agent.py  aio.py  bus.py  config.py  env.py  logging.py  net.py  proc.py  protocol.py  topics.py  wol.py
tests/: test_aio.py  test_brain.py  test_claude_code.py  test_core_app.py  test_dialog_log.py  test_dispatch.py  test_home_app.py  test_home_ha.py  test_home_mock.py  test_hud.py  test_memory.py  test_proc.py  test_protocol.py  test_push.py  test_reconnect.py  test_registry.py  test_router.py  test_scheduler.py  test_skills.py  test_topics.py  test_voice_confirm.py  test_voice_endpointer.py  test_voice_pipeline.py  test_wol.py
