[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "christopher"
version = "0.0.1"
description = "Christopher — distributed AI assistant (Hub + device agents), cloud-only brain"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt>=2.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
christopher-core = "christopher.core.app:main"
christopher-desktop = "christopher.agents.desktop.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/christopher"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
