[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "christopher"
version = "0.0.1"
description = "Christopher — distributed AI assistant (Hub + device agents), cloud-only brain"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt>=2.3",
    "anthropic>=0.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# Голосовой агент (Phase 2). Piper ставится отдельно как бинарь (см. README).
voice = [
    "openwakeword>=0.6",
    "sounddevice>=0.4",
    "numpy>=1.26",
    "httpx>=0.27",
]

[project.scripts]
christopher-core = "christopher.core.app:main"
christopher-desktop = "christopher.agents.desktop.app:main"
christopher-cli = "christopher.cli.app:main"
christopher-voice = "christopher.agents.voice.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/christopher"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

# Опциональные аудио-зависимости без типовых стабов — игнорируем отсутствие стабов.
[[tool.mypy.overrides]]
module = ["openwakeword.*", "sounddevice", "numpy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
