[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "friday"
version = "0.0.1"
description = "Пятница — distributed AI assistant (Hub + device agents), cloud-only brain"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt>=2.3",
    "anthropic>=0.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "apscheduler>=3.10,<4",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    # push на телефон (ntfy) в Core; и так транзитивная зависимость anthropic — фиксируем явно
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
# Голосовой агент (Phase 2). Piper ставится отдельно как бинарь (см. README).
# openWakeWord намеренно НЕ здесь: на Linux он тянет tflite-runtime, у которого нет колёс
# под Python 3.12. Мы используем ONNX-инференс, поэтому ставим onnxruntime + runtime-зависимости
# openWakeWord сами, а сам пакет — отдельным шагом с --no-deps (см. Makefile: install-voice).
voice = [
    "sounddevice>=0.4",
    "numpy>=1.26",
    "httpx>=0.27",
    "onnxruntime>=1.17",
    "scipy>=1.3",
    "scikit-learn>=1",
    "tqdm>=4",
    "requests>=2",
    "yandex-speechkit>=1.5",  # TTS v3 (gRPC): нейроголоса современнее v1 REST
]

# Веб-чат (зачаток HUD): страница + WebSocket поверх шины
hud = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
friday-core = "friday.core.app:main"
friday-desktop = "friday.agents.desktop.app:main"
friday-cli = "friday.cli.app:main"
friday-voice = "friday.agents.voice.app:main"
friday-hud = "friday.hud.app:main"
friday-home = "friday.agents.home.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/friday"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

# Зависимости без типовых стабов — игнорируем отсутствие стабов.
[[tool.mypy.overrides]]
module = ["openwakeword.*", "sounddevice", "numpy", "apscheduler.*", "speechkit.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
